# SketchMeshVR

./: .gitignore  .gitmodules  Instructions for Oculus programming.txt  README.md  imgui_notes.txt
CosseratRods/CosseratRodsWithPD/src/: CMakeLists.txt  README.txt
CosseratRods/CosseratRodsWithPD/src/projectivedynamics/: CosseratRodsPD.cpp  body.h  constraint.cpp  constraint.h  helpers.h  helpersrendering.h  input.h  mesh.h  polyline.cpp  polyline.h  scene.cpp  scene.h  softBody.cpp  softBody.h  visualization.cpp  visualization.h
OVRAvatarSDK/Samples/Mirror/: Mirror.cpp
OVRAvatarSDK/Samples/VS2013/: CMakeCache.txt
OVRAvatarSDK/Windows/: libovravatar.lib
OculusSDK/LibOVR/Include/: OVR_CAPI.h
OculusSDK/LibOVR/Include/Extras/: OVR_CAPI_Util.h  OVR_Math.h
OculusSDK/LibOVR/Lib/Windows/Win32/Debug/VS2015/: LibOVR.lib  LibOVRd.lib
OculusSDK/LibOVR/Projects/Windows/VS2015/: LibOVR.vcxproj
OculusSDK/Samples/OculusWorldDemo/: RCa08692
Paper/IGL-Thesis-LaTeX-template/: abstract.aux  apx-sample-appendix.aux  ch0-conclusion.aux  ch01-introduction.aux  ch01-introduction.tex  ch02-related-work.aux  ch02-related-work.tex  ch03-more-chapters.aux  ch03-more-chapters.tex  ch03-system-description.aux  ch03-system-description.tex  ch04-conclusion.aux  ch04-results.aux  ch04-results.tex  ch05-conclusion.aux  ch05-conclusion.tex  thesis.aux  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
Paper/thesis files/: abstract.aux  abstract.tex  apx-sample-appendix.tex  ch01-introduction.aux  ch01-introduction.tex  ch02-related-work.aux  ch02-related-work.tex  ch03-system-description.aux  ch03-system-description.tex  ch04-results.aux  ch04-results.tex  ch05-conclusion.aux  ch05-conclusion.tex  preamble.tex  testbib.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc  thesisref.bib
Presentation/: ~$Master Thesis Presentation.pptx
Presentation/Paper/thesis files/: ch03-system-description.tex
RefactorVR/: CMakeLists.txt
RefactorVR/cmake/: FindLIBIGL.cmake
RefactorVR/src/: AppState.h  CleanStroke3D.cpp  CurveDeformation.cpp  CurveDeformation.h  CurveRub.h  LaplacianCurveEdit.cpp  LaplacianCurveEdit.h  LaplacianRemesh.cpp  LaplacianRemesh.h  Mesh.cpp  Mesh.h  MeshCut.cpp  MeshCut.h  MeshExtrusion.cpp  MeshExtrusion.h  Patch.cpp  Patch.h  Plane.cpp  SketchMeshVR.cpp  Stroke.cpp  Stroke.h  SurfacePath.cpp  SurfacePath.h  SurfaceSmoothing.cpp  SurfaceSmoothing.h  oculus_gui_fs.glsl  oculus_gui_vs.glsl
SketchMesh/: CMakeLists.txt  SketchMesh_bin_macOS
SketchMesh/Old code/: draw_stroke.cpp  draw_stroke.h
SketchMesh/src/: CMakeLists.txt  CurveDeformation.cpp  CurveDeformation.h  LaplacianRemesh.cpp  LaplacianRemesh.h  Mesh.cpp  Mesh.h  MeshCut.cpp  MeshCut.h  MeshExtrusion.cpp  MeshExtrusion.h  Plane.cpp  Plane.h  SketchMesh.cpp  SketchMesh.h  Stroke.cpp  Stroke.h  SurfacePath.cpp  SurfacePath.h  SurfaceSmoothing.cpp  SurfaceSmoothing.h  main.cpp
SketchMeshVR/: CMakeLists.txt
SketchMeshVR/src/: AppState.h  CleanStroke3D.cpp  CleanStroke3D.h  CurveDeformation.cpp  CurveDeformation.h  CurveRub.cpp  LaplacianCurveEdit.h  LaplacianRemesh.cpp  LaplacianRemesh.h  MeshCut.cpp  MeshExtrusion.cpp  MeshExtrusion.h  Patch.cpp  Patch.h  Plane.h  SketchMeshVR.cpp  Stroke.cpp  Stroke.h  SurfaceSmoothing.cpp  SurfaceSmoothing.h
VR-SketchMesh/: CMakeLists.txt
VR-SketchMesh/cmake/: FindLIBIGL.cmake
VR-SketchMesh/src/: CleanStroke3D.cpp  CleanStroke3D.h  CurveDeformation.cpp  LaplacianRemesh.cpp  LaplacianRemesh.h  MeshCut.cpp  MeshCut.h  MeshExtrusion.cpp  MeshExtrusion.h  Plane.cpp  Plane.h  SketchMeshVR.cpp  SketchMeshVR.h  Stroke.cpp  Stroke.h  StrokeVR.cpp  StrokeVR.h  SurfacePath.cpp  SurfacePath.h  SurfaceSmoothing.cpp  SurfaceSmoothing.h
bin_SketchMeshVR/: README.txt
(+5 files in other folders)
